--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>Sticky Hover</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
@@ -30,9 +30,9 @@
 
       (function(l) {
         // SET THIS: e.g. my-repo-name
-        var gitHubRepoName = 'spa-github-pages'
+        var gitHubRepoName = 'sticky-hover'
         // SET THIS: e.g. http://subdomain.example.tld
-        var domain = 'http://spa-github-pages.rafrex.com'
+        var domain = 'http://sticky-hover.rafrex.com'
 
         if (l.pathname.split('/')[1] === gitHubRepoName) {
           l.replace(domain);
@@ -54,25 +54,6 @@
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
 
-    <!-- Start Google Analytics -->
-    <script>
-      if (window.location.hostname === 'spa-github-pages.rafrex.com') {
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-75627125-4', 'auto');
-        ga('send', 'pageview');
-      } else {
-        console.warn(
-          'WARNING: The Google analytics function is for a different ' +
-          'domain (http://spa-github-pages.rafrex.com) and did not run, ' +
-          'please remove the script from the index.html file.');
-      }
-    </script>
-    <!-- End Google Analytics -->
-    
     <link rel="stylesheet" href="/styles/app.css">
   </head>
   <body>
