--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <link rel="stylesheet" href="/styles/app.css">
   </head>
-  <body>
+  <body ontouchstart="">
     <div id="root"></div>
     <!-- single page app in bundle.js -->
     <script src="/__build__/bundle.js"></script>
